syntax = "proto3";

option csharp_namespace = "RemoteController.Rpc";

package greet;

service ControllerFactory {
    rpc CreateXboxController (XboxControllerRequest) returns (XboxControllerReply);
    rpc ConnectXboxController (XboxControllerConnectRequest) returns (XboxControllerConnectReply);
    rpc StartController (stream XboxMessageRequest) returns (stream XboxMessageReply);
}

message XboxControllerRequest {
}

message XboxControllerReply {
    string id = 1;
}

message XboxControllerConnectRequest {
    string id = 1;
}

message XboxControllerConnectReply {
}

message XboxMessageRequest {
    enum Buttons {
        Up = 0;
        Y = 1;
        X = 2;
        B = 3;
        A = 4;
        Guide = 5;
        RightShoulder = 6;
        LeftShoulder = 7;
        LeftThumb = 8;
        Back = 9;
        Start = 10;
        Right = 11;
        Left = 12;
        Down = 13;
        RightThumb = 14;
    }
    message ButtonPressed {
        Buttons button = 1;
    }

    message ButtonReleased {
        Buttons button = 1;
    }

    string id = 1;
    oneof type {
        ButtonPressed buttonPressed = 2;
        ButtonReleased buttonReleased = 3;
    }
}

message XboxMessageReply {
}
